--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~11.0.0",
     "@angular/router": "~11.0.0",
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
+    "@popperjs/core": "^2.9.2",
     "bootstrap": "^4.5.0",
     "font-awesome": "^4.7.0",
     "rxjs": "~6.6.0",
