--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^4.5.0",
     "font-awesome": "^4.7.0",
+    "lodash": "^4.17.21",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -33,6 +34,7 @@
     "@angular/cli": "~11.0.0",
     "@angular/compiler-cli": "~11.0.0",
     "@types/jasmine": "~3.6.0",
+    "@types/lodash": "^4.14.171",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
