--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~11.0.0",
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "@popperjs/core": "^2.9.2",
+    "angular-responsive-carousel": "^2.1.2",
     "bootstrap": "^4.5.0",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.21",
